--- a/index.html
+++ b/index.html
@@ -183,6 +183,9 @@ $(document).ready(function () {
   <a href="about.html">About Me</a>
 </li>
 <li>
+  <a href="Projects.html">Projects</a>
+</li>
+<li>
   <a href="Achievement.html">Achievement</a>
 </li>
       </ul>
@@ -202,7 +205,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>Hello, World!</p>
+<p><strong>Hello! This is Shushi Namba’s website!</strong></p>
 
 
 
