--- a/about.html
+++ b/about.html
@@ -183,6 +183,9 @@ $(document).ready(function () {
   <a href="about.html">About Me</a>
 </li>
 <li>
+  <a href="Projects.html">Projects</a>
+</li>
+<li>
   <a href="Achievement.html">Achievement</a>
 </li>
       </ul>
@@ -202,7 +205,12 @@ $(document).ready(function () {
 </div>
 
 
-<p>Why I am awesome.</p>
+<div id="name" class="section level3">
+<h3>[Name]</h3>
+<ul>
+<li>Shushi Namba</li>
+</ul>
+</div>
 
 
 
