--- a/README.html
+++ b/README.html
@@ -183,6 +183,9 @@ $(document).ready(function () {
   <a href="about.html">About Me</a>
 </li>
 <li>
+  <a href="Projects.html">Projects</a>
+</li>
+<li>
   <a href="Achievement.html">Achievement</a>
 </li>
       </ul>
