--- a/Documents.html
+++ b/Documents.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About Me</title>
+<title>Documents</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -203,21 +203,12 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About Me</h1>
+<h1 class="title toc-ignore">Documents</h1>
 
 </div>
 
 
-<div id="name" class="section level4">
-<h4>[Name]</h4>
-<ul>
-<li>Shushi Namba</li>
-</ul>
-</div>
-<div id="education" class="section level4">
-<h4>[Education]</h4>
-<p>M.A., Institute: Department of Psychology, Graduate school of Education, Hiroshima University, 2016 B.A., Institute: Department of Psychology, Faculty of Education, Hiroshima University, 2014</p>
-</div>
+<p>```{r, echo = FALSE, fig.align=‘center’} library(zousan) embed_slide(“<a href="https://www.slideshare.net/ShushiNamba/mental-model-for-emotion?ref=https://www.slideshare.net/ShushiNamba/slideshelf" class="uri">https://www.slideshare.net/ShushiNamba/mental-model-for-emotion?ref=https://www.slideshare.net/ShushiNamba/slideshelf</a>”) ```</p>
 
 
 
