--- a/Projects.html
+++ b/Projects.html
@@ -172,7 +172,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Shushi-website</a>
+      <a class="navbar-brand" href="index.html">Namba-website</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -187,6 +187,9 @@ $(document).ready(function () {
 </li>
 <li>
   <a href="Achievement.html">Achievement</a>
+</li>
+<li>
+  <a href="Documents.html">Documents</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
@@ -205,9 +208,9 @@ $(document).ready(function () {
 </div>
 
 
-<p>Here’s my interest.</p>
-<div id="the-relationships-between-facial-actions-and-emotional-experiences" class="section level4">
-<h4>[The relationships between facial actions and emotional experiences]</h4>
+<p>Here’s my research interests.</p>
+<div id="facial-expressions" class="section level4">
+<h4>[Facial Expressions]</h4>
 <ul>
 <li>Spontaneous facial expressions.</li>
 <li>Facial feedback hypothesis.</li>
@@ -217,6 +220,7 @@ $(document).ready(function () {
 <h4>[Statistics]</h4>
 <ul>
 <li>This is my only hobby!</li>
+<li>Cognitive modeling.</li>
 </ul>
 </div>
 
