--- a/README.html
+++ b/README.html
@@ -172,7 +172,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Shushi-website</a>
+      <a class="navbar-brand" href="index.html">Namba-website</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -187,6 +187,9 @@ $(document).ready(function () {
 </li>
 <li>
   <a href="Achievement.html">Achievement</a>
+</li>
+<li>
+  <a href="Documents.html">Documents</a>
 </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
