--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Shushi’s Website</title>
+<title>Namba’s Website</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -172,7 +172,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Shushi-website</a>
+      <a class="navbar-brand" href="index.html">Namba-website</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -188,6 +188,9 @@ $(document).ready(function () {
 <li>
   <a href="Achievement.html">Achievement</a>
 </li>
+<li>
+  <a href="Documents.html">Documents</a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
@@ -200,7 +203,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Shushi’s Website</h1>
+<h1 class="title toc-ignore">Namba’s Website</h1>
 
 </div>
 
