--- a/Documents.html
+++ b/Documents.html
@@ -208,7 +208,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>```{r, echo = FALSE, fig.align=‘center’} library(zousan) embed_slide(“<a href="https://www.slideshare.net/ShushiNamba/mental-model-for-emotion?ref=https://www.slideshare.net/ShushiNamba/slideshelf" class="uri">https://www.slideshare.net/ShushiNamba/mental-model-for-emotion?ref=https://www.slideshare.net/ShushiNamba/slideshelf</a>”) ```</p>
+<iframe src="https://www.slideshare.net/slideshow/embed_code/key/mC164rGTHq71s" width="427" height="356" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="https://www.slideshare.net/ShushiNamba/mental-model-for-emotion" title="Mental model for emotion" target="_blank">Mental model for emotion</a> </strong> from <strong><a href="https://www.slideshare.net/ShushiNamba" target="_blank">Shushi Namba</a></strong> </div>
 
 
 
