--- a/about.html
+++ b/about.html
@@ -216,7 +216,10 @@ $(document).ready(function () {
 </div>
 <div id="education" class="section level4">
 <h4>[Education]</h4>
-<p>M.A., Institute: Department of Psychology, Graduate school of Education, Hiroshima University, 2016 B.A., Institute: Department of Psychology, Faculty of Education, Hiroshima University, 2014</p>
+<ul>
+<li>M.A., Institute: Department of Psychology, Graduate school of Education, Hiroshima University, 2016</li>
+<li>, Institute: Department of Psychology, Faculty of Education, Hiroshima University, 2014</li>
+</ul>
 </div>
 
 
